--- a/app/src/main/res/layout/row_upcoming_transactions.xml
+++ b/app/src/main/res/layout/row_upcoming_transactions.xml
@@ -61,7 +61,7 @@
             android:id="@+id/tvDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{data.created}"
+            android:text="@{data.nextSIPDate}"
             android:textSize="@dimen/_10ssp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvAmount"
