--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
                 android:background="@drawable/shape_edt_white_round"
                 android:drawableEnd="@drawable/ic_user"
                 android:hint="@string/email_id_or_mobile_number"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:paddingStart="@dimen/default_space"
                 android:paddingTop="@dimen/space_8"
