--- a/app/src/main/res/layout/dialog_invest_goal.xml
+++ b/app/src/main/res/layout/dialog_invest_goal.xml
@@ -139,7 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_space"
-            android:text="@string/sip_duration"
+            android:text="@string/duration"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintStart_toStartOf="parent"
