--- a/app/src/main/res/layout/fragment_explore_all_invest_funds.xml
+++ b/app/src/main/res/layout/fragment_explore_all_invest_funds.xml
@@ -25,24 +25,51 @@
             tools:context=".module.home.HomeFragment">
 
             <LinearLayout
+                android:id="@+id/llExploreFunds"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/btnExploreFunds"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_height="@dimen/_72sdp"
                     android:layout_marginStart="@dimen/default_space"
-                    android:layout_marginEnd="@dimen/default_space"
                     android:layout_marginTop="@dimen/default_space"
-                    android:background="@drawable/shape_btn_idle_bg"
-                    android:fontFamily="@font/lato_semibold"
+                    android:layout_marginEnd="@dimen/default_space"
+                    android:background="@drawable/bg_pan_verification"
+                    android:elevation="2dp"
                     android:gravity="center"
-                    android:text="@string/explore_all_funds"
-                    android:textColor="@android:color/white"
-                    tools:layout_marginTop="@dimen/default_space" />
+                    android:orientation="horizontal"
+                    android:padding="@dimen/_8sdp">
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:elevation="12dp"
+                        app:cardBackgroundColor="@color/circular_bg"
+                        app:cardCornerRadius="30dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="true"
+                            android:padding="@dimen/space_12"
+                            android:src="@drawable/ic_explore" />
+
+                    </android.support.v7.widget.CardView>
+
+                    <TextView
+                        android:id="@+id/btnExploreFunds"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/lato_bold"
+                        android:padding="@dimen/_8sdp"
+                        android:text="@string/explore_all_funds"
+                        android:textColor="@android:color/white" />
+
+                </LinearLayout>
 
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/clTarrakkiZyaada"
