--- a/app/src/main/res/layout/fragment_raise_ticket.xml
+++ b/app/src/main/res/layout/fragment_raise_ticket.xml
@@ -56,10 +56,11 @@
                 <TextView
                     android:id="@+id/tvChooseTransaction"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_32sdp"
                     android:layout_marginTop="@dimen/space_4"
+                    android:drawablePadding="@dimen/_8sdp"
                     android:background="@drawable/shape_edt_gray_round"
-                    android:drawableEnd="@drawable/ic_drop_down_dark_gray_24dp"
+                    android:drawableEnd="@drawable/ic_transaction_selection"
                     android:gravity="center_vertical"
                     android:hint="@string/select_transaction"
                     android:maxLines="1"
@@ -115,9 +116,11 @@
                 <TextView
                     android:id="@+id/tvUploadPicture"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_32sdp"
                     android:layout_marginTop="@dimen/space_4"
+                    android:drawablePadding="@dimen/_8sdp"
                     android:background="@drawable/shape_edt_gray_round"
+                    android:drawableEnd="@drawable/ic_action_img_icon"
                     android:gravity="center_vertical"
                     android:hint="@string/hint_mydoc_jpg"
                     android:maxLines="1"
