--- a/app/src/main/res/layout/fragment_redemption_status.xml
+++ b/app/src/main/res/layout/fragment_redemption_status.xml
@@ -74,7 +74,7 @@
                     android:visibility="@{isFailed?View.INVISIBLE:View.VISIBLE}" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/space_8"
