--- a/app/src/main/res/layout/row_completed_transactions.xml
+++ b/app/src/main/res/layout/row_completed_transactions.xml
@@ -32,6 +32,7 @@
             android:maxLines="2"
             android:minLines="2"
             android:text="@{data.name}"
+            android:onClick="@{data.openFundDetails}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
             app:layout_constraintEnd_toStartOf="@id/barrier"
