--- a/app/src/main/res/layout/row_inprogress_transactions.xml
+++ b/app/src/main/res/layout/row_inprogress_transactions.xml
@@ -31,6 +31,7 @@
             android:layout_marginEnd="8dp"
             android:maxLines="2"
             android:minLines="2"
+            android:onClick="@{data.openFundDetails}"
             android:text="@{data.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/item_selected_color"
