--- a/app/src/main/res/layout/row_transaction_confirm.xml
+++ b/app/src/main/res/layout/row_transaction_confirm.xml
@@ -13,14 +13,14 @@
             name="isExpanded"
             type="Boolean" />
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
     </data>
 
     <LinearLayout
-        android:layout_marginBottom="@dimen/space_16"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/space_16"
         android:background="@drawable/shape_cart_view"
         android:elevation="@dimen/space_2"
         android:gravity="center_horizontal"
@@ -60,16 +60,15 @@
                 tools:text="545454" />
 
             <ImageView
-                android:paddingStart="12dp"
                 android:id="@+id/imgArrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:visibility="@{widget.isSuccess==true?View.VISIBLE:View.GONE}"
+                android:paddingStart="12dp"
                 android:src="@{isExpanded ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
-                />
+                android:visibility="@{widget.isSuccess==true?View.VISIBLE:View.GONE}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
@@ -88,8 +87,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Type:"
-                    android:textColor="@color/black"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/black" />
 
                 <TextView
                     android:id="@+id/tvType"
@@ -114,8 +113,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Status:"
-                    android:textColor="@color/black"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/black" />
 
                 <TextView
                     android:id="@+id/tvStatus"
@@ -130,11 +129,11 @@
         </RelativeLayout>
 
         <View
-            android:layout_marginTop="@dimen/space_8"
-            android:visibility="@{widget.success==false?View.VISIBLE:View.GONE}"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/lighter_gray"/>
+            android:layout_marginTop="@dimen/space_8"
+            android:background="@color/lighter_gray"
+            android:visibility="@{widget.success==false?View.VISIBLE:View.GONE}" />
 
         <net.cachapa.expandablelayout.ExpandableLayout
             android:id="@+id/expStatus"
@@ -143,28 +142,28 @@
             app:el_duration="500">
 
             <android.support.v7.widget.RecyclerView
-                android:layout_marginTop="@dimen/space_16"
                 android:id="@+id/rvTransactionStatus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_16"
                 android:nestedScrollingEnabled="false"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
         </net.cachapa.expandablelayout.ExpandableLayout>
 
         <LinearLayout
-            android:visibility="@{widget.isSuccess==false?View.VISIBLE:View.GONE}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="@{widget.isSuccess==false?View.VISIBLE:View.GONE}">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Remarks:"
-                android:textColor="@color/black"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+                android:textColor="@color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
