--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -48,7 +48,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mDivider"
             app:reverseLayout="false"
-            app:stackFromEnd="true" />
+            app:stackFromEnd="true"
+            tools:itemCount="5"
+            tools:listitem="@layout/row_sender_message" />
 
         <View
             android:id="@+id/mDivider1"
@@ -59,6 +61,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <View
+            android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/white"
@@ -93,7 +96,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="1dp"
             android:padding="@dimen/_8sdp"
-            android:src="@drawable/ic_camera_alt"
+            android:src="@drawable/ic_camera_black"
             app:layout_constraintBottom_toBottomOf="@id/edtMessage"
             app:layout_constraintEnd_toStartOf="@id/ivSend" />
 
@@ -102,10 +105,10 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:padding="@dimen/_8sdp"
-            android:src="@drawable/ic_send_black_24dp"
-            android:tint="@color/colorAccent"
+            android:src="@drawable/ic_send_msg"
             app:layout_constraintBottom_toBottomOf="@id/edtMessage"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/view" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
