--- a/app/src/main/res/layout/row_questions_list_item.xml
+++ b/app/src/main/res/layout/row_questions_list_item.xml
@@ -21,7 +21,7 @@
             android:id="@+id/tvTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/icon_question"
+            android:drawableStart="@drawable/ic_question"
             android:drawableEnd="@drawable/ic_keyboard_arrow_right_dark_gray"
             android:drawablePadding="@dimen/_8sdp"
             android:gravity="center_vertical"
