--- a/app/src/main/res/layout/row_subquery_list_item.xml
+++ b/app/src/main/res/layout/row_subquery_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="String" />
+            type="com.tarrakki.api.model.SupportQueryListResponse.Data.Subquery" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -22,7 +22,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_keyboard_arrow_right_dark_gray"
-            android:text="@{item}"
+            android:text="@{item.name}"
             android:gravity="center_vertical"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textColor="@color/semi_black"
