1: Implemented api for check transaction availability of query. 2: Implemented submit new ticket api.

--- a/app/src/main/res/layout/fragment_raise_ticket.xml
+++ b/app/src/main/res/layout/fragment_raise_ticket.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -52,7 +51,8 @@
                     android:text="@string/choose_transaction"
                     android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:visibility="@{vm.transactionVisibility}" />
 
                 <TextView
                     android:id="@+id/tvChooseTransaction"
@@ -73,7 +73,8 @@
                     android:text="@{vm.transaction}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
-                    android:textColorHint="@color/darker_gray" />
+                    android:textColorHint="@color/darker_gray"
+                    android:visibility="@{vm.transactionVisibility}" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -152,20 +153,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/default_space"
-                android:padding="@dimen/_10sdp"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:elevation="2dp"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="@dimen/_10sdp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:gravity="center"
-                    android:fontFamily="@font/lato_semibold"
                     android:drawableStart="@drawable/ic_submit_query"
                     android:drawablePadding="@dimen/_4sdp"
+                    android:fontFamily="@font/lato_semibold"
+                    android:gravity="center"
                     android:text="@string/submit"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textColor="@color/white" />
