1: Implement the pop-up for the addition in the folio in Tarrakki Zyaada and test the addition in folio for the Tarrakki Zyaada & fund details. 2: Implement the changes in the fund details screen to display the expense ratio & move the risk level below the top 10 holdings. 3: Implement the change in the raise ticket UI to provide the option to upload the file.

--- a/app/src/main/res/drawable/ic_camera_black.xml
+++ b/app/src/main/res/drawable/ic_camera_black.xml
@@ -1,5 +1,12 @@
-<vector android:height="27dp" android:viewportHeight="27.11"
-    android:viewportWidth="32.67" android:width="33dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M30.68,27.11H1.99c-1.1,0 -1.99,-0.89 -1.99,-1.99V7.06c0,-1.1 0.89,-1.99 1.99,-1.99h5.34l1.19,-3.01C9.01,0.81 10.2,0 11.54,0h9.59c1.34,0 2.53,0.81 3.02,2.06l1.19,3.01h5.34c1.1,0 1.99,0.89 1.99,1.99v18.06C32.67,26.22 31.77,27.11 30.68,27.11zM1.99,7.07L2,25.12l28.68,-0.01L30.67,7.06l-6.69,0.01l-1.69,-4.28C22.1,2.31 21.64,2 21.13,2h-9.59c-0.52,0 -0.97,0.31 -1.16,0.79v0L8.69,7.07H1.99z"/>
-    <path android:fillColor="#FF000000" android:pathData="M16.33,22.86c-4.22,0 -7.65,-3.43 -7.65,-7.65s3.43,-7.65 7.65,-7.65s7.65,3.43 7.65,7.65S20.55,22.86 16.33,22.86zM16.33,9.57c-3.11,0 -5.65,2.53 -5.65,5.65c0,3.11 2.53,5.65 5.65,5.65s5.65,-2.53 5.65,-5.65C21.98,12.11 19.45,9.57 16.33,9.57z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="33dp"
+    android:height="27dp"
+    android:viewportWidth="32.67"
+    android:viewportHeight="27.11">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M30.68,27.11H1.99c-1.1,0 -1.99,-0.89 -1.99,-1.99V7.06c0,-1.1 0.89,-1.99 1.99,-1.99h5.34l1.19,-3.01C9.01,0.81 10.2,0 11.54,0h9.59c1.34,0 2.53,0.81 3.02,2.06l1.19,3.01h5.34c1.1,0 1.99,0.89 1.99,1.99v18.06C32.67,26.22 31.77,27.11 30.68,27.11zM1.99,7.07L2,25.12l28.68,-0.01L30.67,7.06l-6.69,0.01l-1.69,-4.28C22.1,2.31 21.64,2 21.13,2h-9.59c-0.52,0 -0.97,0.31 -1.16,0.79v0L8.69,7.07H1.99z" />
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M16.33,22.86c-4.22,0 -7.65,-3.43 -7.65,-7.65s3.43,-7.65 7.65,-7.65s7.65,3.43 7.65,7.65S20.55,22.86 16.33,22.86zM16.33,9.57c-3.11,0 -5.65,2.53 -5.65,5.65c0,3.11 2.53,5.65 5.65,5.65s5.65,-2.53 5.65,-5.65C21.98,12.11 19.45,9.57 16.33,9.57z" />
 </vector>
