--- a/app/src/main/res/layout/fragment_raise_ticket.xml
+++ b/app/src/main/res/layout/fragment_raise_ticket.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -56,9 +57,8 @@
                         android:layout_centerVertical="true"
                         android:layout_marginEnd="@dimen/_4sdp"
                         android:layout_toStartOf="@id/switchOnOff"
-                        android:fontFamily="@font/lato_semibold"
+                        android:fontFamily="@font/lato_bold"
                         android:text="@string/do_you_want_to_raise_the_ticket_for_the_transaction"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                         android:textColor="@color/black" />
 
                     <ToggleButton
@@ -145,27 +145,59 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/black" />
 
-                <TextView
-                    android:id="@+id/tvUploadPicture"
+                <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_32sdp"
                     android:layout_marginTop="@dimen/space_4"
-                    android:background="@drawable/shape_edt_gray_round"
-                    android:drawableEnd="@drawable/ic_action_img_icon"
-                    android:drawablePadding="@dimen/_8sdp"
-                    android:gravity="center_vertical"
-                    android:hint="@string/hint_mydoc_jpg"
-                    android:maxLines="1"
-                    android:padding="@dimen/_8sdp"
-                    android:paddingStart="@dimen/default_space"
-                    android:paddingTop="@dimen/space_8"
-                    android:paddingEnd="@dimen/default_space"
-                    android:paddingBottom="@dimen/space_8"
-                    android:singleLine="true"
-                    android:text="@{vm.imgName}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/darker_gray" />
+                    android:background="@drawable/shape_edt_gray_round">
+
+                    <TextView
+                        android:id="@+id/tvUploadPicture"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_32sdp"
+                        android:background="@null"
+                        android:gravity="center_vertical"
+                        android:hint="@string/hint_mydoc_jpg"
+                        android:maxLines="1"
+                        android:padding="@dimen/_8sdp"
+                        android:paddingStart="@dimen/default_space"
+                        android:paddingTop="@dimen/space_8"
+                        android:paddingEnd="@dimen/default_space"
+                        android:paddingBottom="@dimen/space_8"
+                        android:singleLine="true"
+                        android:text="@{vm.imgName}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/darker_gray"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/openFile"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/openFile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/_6sdp"
+                        android:rotation="60"
+                        android:src="@drawable/ic_file_attachment"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/openGallery"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/openGallery"
+                        android:layout_width="@dimen/_32sdp"
+                        android:layout_height="@dimen/_32sdp"
+                        android:layout_marginEnd="@dimen/_4sdp"
+                        android:padding="@dimen/_6sdp"
+                        android:src="@drawable/ic_camera_black"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                </android.support.constraint.ConstraintLayout>
 
                 <ImageView
                     android:id="@+id/ivUploadPic"
